Changelog started November 4, 2008.

SMF Wiki 0.1                                                                   ?
================================================================================
April 2009
--------------------------------------------------------------------------------
 + Rewritten WikiParser (started in March)
 + New Installer code
 ! Don't show Wiki in Admin when disabled
 + Added support for adding variables

February 2009
--------------------------------------------------------------------------------
 ! Wikiparser lost some raw sections
 ! Wikiparser lost values for numeric parameters
 + Make links to non-existing pages red
 ! Cache wasn't cleared after talk topic was created

January 2009
--------------------------------------------------------------------------------
 + Many code improvements
 + Upload Feature
 + Added more caching features
 + Added functions for creating pages and revisions

December 2008
--------------------------------------------------------------------------------
 ! Missing language string 'wikiAttachmentsDir'
 ! Language string typo 'cannot_wiki_edit_current_page'
 ! Talk form redirecting wrong url
 ! "method" attribute missing for form in page history
 ! Error caused when old revision is not selected
 * Some tweaks to the Special:RecentChanges
 ! url to edit section was wrong
 ! Redirect was broken

November 2008
--------------------------------------------------------------------------------
 ! Redirect to correct case
 ! Allows page names to start with lowercase letter
 + Added ability to change talk board

Legend:
--------------------------------------------------------------------------------
 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.